fix: add vm option