@@ -1,1 +1,2 @@
 -Xmx512m
+--add-opens=java.desktop/sun.awt=ALL-UNNAMED
